# FullStack-AI-24-2

./: .gitignore
chat-app/: .gitignore  Dockerfile  check_hf_credentials.py  cmd  cmd.sh  pyproject.toml  run.docker.sh  run.local.sh  run.sh  setup.sh
chat-app/app/: main.py
data-managment/: data_managment.ipynb  pyproject.toml
data-managment/training_checkpoints/: ckpt-1.index  ckpt-2.index  ckpt-3.index
project-template/: myapp.code-workspace
project-template/backend/: api.py  demo.py  flowers_model_router.py  iris_model_router.py  main.py  models.py  pyproject.toml  test_tf.py
project-template/frontend/: client.py  home.py  pyproject.toml
project-template/models/: .gitignore  flowers_model.ipynb  iris_train.ipynb  pyproject.toml
project-template/models/iris-model/keras/: model.keras
project-template/models/iris-model/sklearn/: model.pk
rag-app/: pyproject.toml  rag_chat.py
