[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.7.2"
chainlit = "^1.1.402"
python-dotenv = "^1.0.1"
google-cloud-aiplatform = "^1.63.0"
tenacity = "^9.0.0"
rich = "^13.7.1"
pillow = "^10.4.0"
diffusers = "^0.30.2"
torch = "^2.4.1"
transformers = {extras = ["sentencepiece"], version = "^4.44.2"}
accelerate = "^0.34.2"
google-cloud-secret-manager = "^2.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
