[tool.poetry]
name = "rag-app"
version = "0.1.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.1"
rich = "^13.8.1"
langchain-google-genai = "^2.0.0"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.1"
docx2txt = "^0.8"
gradio = "^4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
