[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
scikit-learn = "^1.5.2"
python-multipart = "^0.0.10"
pillow = "^10.4.0"
tensorflow = "^2.17.0"
tensorflow-metal = "^1.1.0"
typing-inspect = "^0.9.0"
pydantic = "^2.9.2"
fastapi-restful = {extras = ["all"], version = "^0.6.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
